[tool.poetry]
name = "beancount-hledger-import-hooks"
version = "0.0.1"
description = "A set of post processing hooks for beancount ingest that uses hledger csv import rules files to automatically categorize transactions."
readme = "README.md"
license = "MIT"
authors = ["Zenobius Jiricek <airtonix@users.noreply.github.com>"]
homepage = "https://github.com/zenobi-us/beancount-hledger-import-hooks"
repository = "https://github.com/zenobi-us/beancount-hledger-import-hooks"
documentation = "https://github.com/zenobi-us/beancount-hledger-import-hooks/blob/main/README.md"
packages = [{ include = "beancount_hledger_import_hooks", from = "." }]


[tool.poetry.dependencies]
beancount = "2.3.6"
click = "^8.1.7"
lark = "^1.2.2"
nltk = "^3.9"
pydantic = "^2.8.2"
pydantic-yaml = "^1.3.0"
python = "^3.10"
rich = "^13.7.1"
smart-importer = "v0.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.6.1"
pytest = "^8.3.2"
debugpy = "^1.8.5"
pytest-md-report = "^0.6.2"
pydoc-markdown = "^4.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.urls]
issues = "https://github.com/zenobi-us/beancount-hledger-import-hooks/issues"

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["./beancount_hledger_import_hooks"]

[tool.pydoc-markdown.renderer]
type = "markdown"


[[tool.pydoc-markdown.renderer.pages]]
title = "API Documentation"
name = "index"
output = "docs/api/index.md"
