[project]
name = "beancount-hledger-import-hooks"
version = "0.0.1"
description = "A set of post processing hooks for beancount ingest that uses hledger csv import rules files to automatically categorize transactions."
authors = [
    { name = "Zeno Jiricek", email = "airtonix@users.noreply.github.com" },
    { name = "Zenobius Jiricek", email = "airtonix@users.noreply.github.com" },
]
dependencies = [
    "beancount==2.3.6",
    "click<9.0.0,>=8.1.7",
    "lark<2.0.0,>=1.2.2",
    "nltk<4.0,>=3.9",
    "pydantic<3.0.0,>=2.8.2",
    "pydantic-yaml<2.0.0,>=1.3.0",
    "rich<14.0.0,>=13.7.1",
    "smart-importer==0.5",
]
requires-python = "<4.0,>=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
issues = "https://github.com/zenobi-us/beancount-hledger-import-hooks/issues"
homepage = "https://github.com/zenobi-us/beancount-hledger-import-hooks"
repository = "https://github.com/zenobi-us/beancount-hledger-import-hooks"
documentation = "https://github.com/zenobi-us/beancount-hledger-import-hooks/blob/main/README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["./beancount_hledger_import_hooks"]

[tool.pydoc-markdown.renderer]
type = "markdown"


[[tool.pydoc-markdown.renderer.pages]]
title = "API Documentation"
name = "index"
output = "docs/api/index.md"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit<4.0.0,>=3.8.0",
    "ruff>=0.6.1",
    "pytest<9.0.0,>=8.3.2",
    "debugpy<2.0.0,>=1.8.5",
    "pytest-md-report<1.0.0,>=0.6.2",
    "pydoc-markdown<5.0.0,>=4.8.2",
]

[tool.pdm.build]
includes = ["beancount_hledger_import_hooks"]
